[package]
name = "logcat_injector"
version = "0.1.0"
authors = ["Daniel Herslof <d_herslof@hotmail.com>"]
edition = "2018"
license = "MIT"
Description = "Logcat injector - Continuously inject log entry's to logcat"
homepage = "https://github.com/dherslof/testing_toolbox/tree/master/logcat_injector"
repository = "https://github.com/dherslof/testing_toolbox"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.*"
